--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my website!</h1>
+        <h2>This is my first web project on git<h2>
         <p>Hello, World!</p>
     </body>
 </html>
