--- a/hello.html
+++ b/hello.html
@@ -2,16 +2,11 @@
 <html>
     <head>
         <title>Hello!</title>
-        <style>
-            h1 {
-                color: blue
-            }
-        </style>
     </head>
     <body>
         <h1>Welcome to my website!</h1>
         <h2>This is my first web project on git</h2>
         
-        <p>Hello, World!</p>
+        <p style="color:blue">Hello, World</p>
     </body>
 </html>
