--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>Welcome to my website!</h1>
+        <h1>Welcome to my website!!</h1>
         <h2>This is my first web project on git</h2>
         
         <p style="color:blue">Hello, World</p>
